<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">PrivacyTest</string>
    <string name="button_unassigned">Unassigned contacts</string>
    <string name="button_acq">Acquaintances</string>
    <string name="button_work">Coworkers</string>
    <string name="button_friend">Friends</string>
    <string name="button_family">Family</string>
    <string name="button_uni">University</string>
    <string name="button_all">All contacts</string>
    <string name="button_refresh">Synchonize contacts</string>
    <string name="button_clear">Clear</string>
     <string name="button_apply">Apply</string>
     <string name="button_applyAll">Apply all </string>
     <string name="button_generate">Generate Logs </string>
    
    
</resources>

