<?xml version="1.0" encoding="utf-8"?>

<!-- Outermost  LinearLayout with vertical orientation -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--
     Inner LinearLayout with horizontal orientation
		and layout weight of 1 out of 4
    -->

    <!--
     Inner LinearLayout with vertical orientation
		and layout weight of 3 out of 4
    -->

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical" >

        <!-- TextView with layout weight of 1 out of 4 -->

        <Button
            android:id="@+id/bUnassigned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_unassigned" />
        
        <Button
            android:id="@+id/bAcq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_acq" />
        
         <Button
            android:id="@+id/bWork"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_work" />
         
          <Button
            android:id="@+id/bFriend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_friend" />
          
           <Button
            android:id="@+id/bFamily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_family" />
           
           <Button
            android:id="@+id/bUni"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_uni" />
           
           <Button
            android:id="@+id/bAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_all" />

           <Button
            android:id="@+id/bRefresh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_refresh"/>

           <Button
               android:id="@+id/bClear"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
              android:text="@string/button_clear"/>
           
           <Button
               android:id="@+id/bGenerateLogs"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
              android:text="@string/button_generate"/>
        
    </LinearLayout>

</LinearLayout>